[package]
name = "lsm6ds33_lib"
version = "0.1.0"
authors = ["Lainkai <tefman7422@gmail.com>"]
edition = "2018"
license= "BSD-3-Clause"
description = "A set of drivers for the 6-dof device for Raspberry Pi over i2c."
#keywords = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
log = "0.4.8"
byteorder = "1.3.4"
GSL = "*"
